# max2sc

./: CLAUDE.md  Cargo.toml  Makefile
crates/max2sc/: Cargo.toml
crates/max2sc-analyzer/: Cargo.toml
crates/max2sc-analyzer/src/: error.rs  graph.rs  lib.rs  routing.rs  spatial_analysis.rs
crates/max2sc-analyzer/tests/: graph_tests.rs
crates/max2sc-codegen/: Cargo.toml
crates/max2sc-codegen/src/: config_gen.rs  error.rs  formatting.rs  lib.rs  osc_gen.rs  pattern_gen.rs  project_gen.rs  synth_gen.rs
crates/max2sc-codegen/src/converters/: audio_io.rs  effects.rs  hoa.rs  mod.rs  multichannel.rs  spatial.rs  vbap.rs  wfs.rs
crates/max2sc-codegen/tests/: project_gen_tests.rs
crates/max2sc-core/: Cargo.toml
crates/max2sc-core/src/: error.rs  lib.rs  mapping.rs  traits.rs  types.rs
crates/max2sc-max-types/: Cargo.toml
crates/max2sc-max-types/src/: attributes.rs  connections.rs  lib.rs  objects.rs  osc.rs  patch.rs
crates/max2sc-parser/: Cargo.toml
crates/max2sc-parser/src/: error.rs  json_parser.rs  lib.rs  osc_parser.rs  validation.rs
crates/max2sc-parser/tests/: osc_tests.rs  parser_tests.rs
crates/max2sc-sc-types/: Cargo.toml
crates/max2sc-sc-types/src/: bus.rs  lib.rs  osc.rs  pattern.rs  project.rs  synth_def.rs  ugen.rs
crates/max2sc-spatial/: Cargo.toml
crates/max2sc-spatial/src/: conversions.rs  error.rs  lib.rs  mapping.rs  validation.rs
crates/max2sc-test/: Cargo.toml  README.md
crates/max2sc-test/examples/: basic_test.rs  phase4_demo.rs  test_framework_demo.rs
crates/max2sc-test/src/: assertions.rs  audio.rs  comparison.rs  error.rs  fixtures.rs  functional.rs  lib.rs  phase4_tests.rs  runner.rs  spatial_functional_tests.rs  spatial_tests.rs  syntax.rs
crates/max2sc/src/: cli.rs  config.rs  conversion.rs  lib.rs  main.rs  validation.rs
crates/max2sc/tests/: phase3_5_integration.rs
doc/: ANALYSIS_82CH_AES67_SOLUTIONS.md  ARCH.md  CONVERSION_STRATEGIES.md  DATA_TYPES.md  DESIGN.md  DESIGN_COMPARISON_TESTING.md  DESIGN_CONVERSION.md  DESIGN_SPATIAL.md  DEV.md  MAPPING.md  PLAN.md  PROGRESS.md  ROADMAP.md  STUDY_64_CHANNEL_AUDIO.md  STUDY_COMPARISON_TESTING.md  STUDY_MAX_OBJECTS.md  STUDY_Max8_Project_Analysis.md  STUDY_PIPEWIRE_AES67_INTEGRATION.md  STUDY_SPAT5.md  TEST.md
doc/analysis_output/: detailed_objects.json  mapping_analysis.md  osc_namespace.md  summary.json
scripts/: analyze_max_patches.py  extract_osc_commands.py  setup_82ch_aes67.sh  test_pipewire_multichannel.sh
