[workspace]
resolver = "2"
members = [
    "crates/max2sc",
    "crates/max2sc-core",
    "crates/max2sc-max-types",
    "crates/max2sc-sc-types",
    "crates/max2sc-parser",
    "crates/max2sc-analyzer",
    "crates/max2sc-codegen",
    "crates/max2sc-spatial",
    "crates/max2sc-test",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
petgraph = "0.6"
thiserror = "2.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"
indexmap = "2.0"
walkdir = "2.0"
eyre = "0.6"
color-eyre = "0.6"
criterion = "0.5"
proptest = "1.0"
pretty_assertions = "1.0"
insta = "1.0"
tempfile = "3.0"
