[package]
name = "max2sc-codegen"
version = "0.1.0"
edition = "2021"
description = "SuperCollider code generation for max2sc converter"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = { workspace = true }
max2sc-core = { path = "../max2sc-core" }
max2sc-max-types = { path = "../max2sc-max-types" }
max2sc-sc-types = { path = "../max2sc-sc-types" }
max2sc-analyzer = { path = "../max2sc-analyzer" }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
max2sc-parser = { path = "../max2sc-parser" }