[package]
name = "max2sc-parser"
version = "0.1.0"
edition = "2021"
description = "Max patch parser for max2sc converter"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
max2sc-core = { path = "../max2sc-core" }
max2sc-max-types = { path = "../max2sc-max-types" }

[dev-dependencies]
pretty_assertions = { workspace = true }